--- a/config.properties
+++ b/config.properties
@@ -8,6 +8,6 @@ state = Lay
 city1=Lrt
 Description =  kkttd state 
 search_box =patna
-update_city= Panaji
+update_city= Panajirt
 update_state=Goa
 upd_Description=Goa state
