--- a/config.properties
+++ b/config.properties
@@ -2,12 +2,13 @@ url = https://alpha.loyaltri.com/master
 username =admin
 password = 123abcAB
 country = india
-Document_Type = Certificates
-DescriptionDoc= Certificates verfication
-state = Lay
-city1=Lrt
-Description =  kkttd state 
-search_box =patna
-update_city= Panajirt
-update_state=Goa
-upd_Description=Goa state
+Document_Type = Certific
+DescriptionDoc= Certificates v
+state =Meghalaya	
+city1= Shillong
+Description =  Meghalaya
+search_box =Meghalaya	
+update_city= Manipur
+update_state=Imphal
+upd_Description=Manipur state
+search=Tripura
